<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TermsCondition"
    tools:ignore="ExtraText"
    android:background="@color/white"
    android:orientation="vertical">


    <TextView
        android:id="@+id/upperyellowbar"
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:layout_marginTop="-50dp"
        android:background="@drawable/circle"
        android:elevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/terms_amp_condition"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/version_3_0_1"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txtBetween"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/these_terms_and_conditions_set_out_the_agreement_between"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/txtYou"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/you_the_person_we_opened_account_for_n_nus_herocycle_recyling_applications_so_whenever_you_see_we_us_or_our_you_know_who_we_referring_to"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNutshell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:text="@string/in_nutshell"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/we_care_about_your_privacy_and_we_always_want_to_be_transparent_about_how_herocycle_handles_your_data_n_nyour_data_is_not_our_business_we_only_collect_your_personal_data_that_s_essential_to_do_the_recycling_delivery_we_own_herocycle_but_everything_you_put_in_it_is_100_your_own_we_ll_never_share_it_with_3rd_parties_without_your_express_permission"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="normal" />


    <ImageView
        android:id="@+id/imagSecurity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/security"
        app:srcCompat="@drawable/security" />

</LinearLayout>