<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Register">

    <TextView
        android:id="@+id/upperyellowbar"
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:layout_marginTop="-50dp"
        android:background="@drawable/circle"
        android:elevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="19dp"
        android:layout_height="19dp"
        android:layout_marginStart="316dp"
        android:layout_marginTop="488dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="224dp"
        android:contentDescription="@string/eye_close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/eye_close" />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="234dp"
        android:layout_height="66dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="332dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="333dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#0C0C0C"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="424dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="259dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:textColor="#5E5858"
        android:textColorHint="#006064"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="472dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="211dp"
        android:autofillHints=""
        android:ems="10"
        android:foregroundGravity="center"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:textColorHint="#006064"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtTextPhone"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="518dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="165dp"
        android:autofillHints=""
        android:ems="10"
        android:foregroundGravity="center"
        android:gravity="center_vertical"
        android:hint="@string/mobile"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textColorHint="#006064"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtsigningup"
        android:layout_width="190dp"
        android:layout_height="25dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="574dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="132dp"
        android:text="@string/by_signing_up_you_re_agree_to_our"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTerms"
        android:layout_width="223dp"
        android:layout_height="26dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="596dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="109dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/terms_conditions_and_privacy_policy"
        android:textColor="#3F00FF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="264dp"
        android:layout_height="50dp"
        android:layout_marginStart="163dp"
        android:layout_marginTop="628dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="62dp"
        android:backgroundTint="#FFEB3B"
        android:clickable="true"
        android:focusable="true"
        android:onClick="goAccount"
        android:text="@string/Continue"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="409dp"
        android:layout_height="273dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="2dp"
        android:contentDescription="@string/handshake_illustration"
        app:layout_constraintBottom_toTopOf="@+id/txtSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.542"
        app:srcCompat="@drawable/handshake" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</androidx.constraintlayout.widget.ConstraintLayout>